remover comentarios e alterar model