@@ -43,21 +43,11 @@ public class Principal {
             temporadas.add(dadosTemporada);
         }
 
-        /*temporadas.forEach(System.out::println);*/
-
-       /* for (int i = 0; i < dados.totalTemporadas(); i++) {
-            List<DadosEpisodio> episodiosTemporadas = temporadas.get(i).episodios();
-            for (int j = 0; j < episodiosTemporadas.size(); j++) {
-                System.out.println(episodiosTemporadas.get(j).titulo());
-            }
-        }
-*/
         temporadas.forEach(t -> t.episodios().forEach(e -> System.out.println(e.titulo())));
 
         List<DadosEpisodio> dadosEpisodios = temporadas.stream()
                 .flatMap(t -> t.episodios().stream())
-                /*.collect(Collectors.toList());    // lista que permite modificacao ex> .add */
-                .toList();                           // lista imutavel
+                .toList();
 
         System.out.println("\n******TOP 5 EPISODIOS******");
         dadosEpisodios.stream()
